[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/SF1/ShiningForceTextBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/SF1/ShiningForceMenuBorder.png" type="Texture" id=2]
[ext_resource path="res://General/BattleViewSelectedActorInfo/BattleViewSelectedActorInfo.gd" type="Script" id=4]
[ext_resource path="res://Assets/SF1/ShiningForceMenuFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/SF1/PlayableCharacters/Hans/Unpromoted_Portraits.png" type="Texture" id=6]

[node name="BattleViewSelectedActorInfoRoot" type="Node2D"]
script = ExtResource( 4 )

[node name="StatNinePatchRect" type="NinePatchRect" parent="."]
margin_left = 55.0
margin_top = 6.0
margin_right = 263.0
margin_bottom = 174.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ClassLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 7.0
margin_right = 40.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
text = "CLSS"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 45.0
margin_top = 7.0
margin_right = 133.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
text = "NAME"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 21.0
margin_right = 24.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "LV"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 27.0
margin_top = 21.0
margin_right = 76.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "1"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HPStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 34.0
margin_right = 24.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "HP"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 27.0
margin_top = 34.0
margin_right = 76.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "10/ 10"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MPStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 47.0
margin_right = 24.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 5 )
text = "MP"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MPLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 27.0
margin_top = 47.0
margin_right = 75.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 5 )
text = "18/ 18"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ExpStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 60.0
margin_right = 24.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 5 )
text = "EX"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ExpLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 27.0
margin_top = 60.0
margin_right = 76.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AttackStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 97.0
margin_top = 21.0
margin_right = 153.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "ATTACK"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DefenseStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 97.0
margin_top = 34.0
margin_right = 153.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "DEFENSE"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MoveStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 97.0
margin_top = 47.0
margin_right = 153.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 5 )
text = "MOVE"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AgilityStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 97.0
margin_top = 60.0
margin_right = 153.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 5 )
text = "AGILITY"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AttackLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 155.0
margin_top = 21.0
margin_right = 191.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DefenseLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 155.0
margin_top = 34.0
margin_right = 191.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MoveLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 155.0
margin_top = 47.0
margin_right = 191.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AgilityLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 155.0
margin_top = 60.0
margin_right = 191.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MagicStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 81.0
margin_right = 44.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 5 )
text = "MAGIC"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MagicNothingStaticLabel" type="Label" parent="StatNinePatchRect"]
visible = false
margin_left = 8.0
margin_top = 96.0
margin_right = 64.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.952941, 0.670588, 0.305882, 1 )
text = "NOTHING"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SpellsVBoxContainer" type="VBoxContainer" parent="StatNinePatchRect"]
margin_left = 8.0
margin_top = 99.0
margin_right = 204.0
margin_bottom = 219.0
rect_scale = Vector2( 0.55, 0.55 )
custom_constants/separation = 32
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemsStaticLabel" type="Label" parent="StatNinePatchRect"]
margin_left = 97.0
margin_top = 81.0
margin_right = 137.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 5 )
text = "ITEMS"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemsNothingStaticLabel" type="Label" parent="StatNinePatchRect"]
visible = false
margin_left = 97.0
margin_top = 96.0
margin_right = 153.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.952941, 0.670588, 0.305882, 1 )
text = "NOTHING"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InventoryVBoxContainer" type="VBoxContainer" parent="StatNinePatchRect"]
margin_left = 99.0
margin_top = 100.0
margin_right = 286.0
margin_bottom = 211.0
rect_scale = Vector2( 0.55, 0.55 )
custom_constants/separation = 32
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PortraitSprite" type="Sprite" parent="."]
position = Vector2( 26.7908, 41.5002 )
texture = ExtResource( 6 )
hframes = 4
__meta__ = {
"_edit_lock_": true
}

[node name="PortraitNinePatchRect" type="NinePatchRect" parent="."]
margin_top = 6.0
margin_right = 55.0
margin_bottom = 77.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CharacterNinePatchRect" type="NinePatchRect" parent="."]
margin_top = 77.0
margin_right = 55.0
margin_bottom = 145.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CharacterNinePatchRect"]
position = Vector2( 27, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="KillsStaticLabel" type="Label" parent="CharacterNinePatchRect"]
margin_left = 4.10471
margin_top = 21.6121
margin_right = 44.1047
margin_bottom = 29.6121
custom_fonts/font = ExtResource( 5 )
text = "KILLS"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="KillsAmountLabel" type="Label" parent="CharacterNinePatchRect"]
margin_left = 5.0
margin_top = 31.0
margin_right = 50.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DefeatStaticLabel" type="Label" parent="CharacterNinePatchRect"]
margin_left = 4.10471
margin_top = 41.6121
margin_right = 52.1047
margin_bottom = 49.6121
custom_fonts/font = ExtResource( 5 )
text = "DEFEAT"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DefeatAmountLabel" type="Label" parent="CharacterNinePatchRect"]
margin_left = 5.0
margin_top = 52.0
margin_right = 50.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GoldNinePatchRect" type="NinePatchRect" parent="."]
margin_top = 145.0
margin_right = 55.0
margin_bottom = 174.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GoldStaticLabel" type="Label" parent="GoldNinePatchRect"]
margin_left = 6.36054
margin_top = 6.66667
margin_right = 38.3605
margin_bottom = 14.6667
custom_fonts/font = ExtResource( 5 )
text = "GOLD"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GoldAmountLabel" type="Label" parent="GoldNinePatchRect"]
margin_left = 7.0
margin_top = 16.0
margin_right = 49.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
